--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <img src="src/img/Avatar 758.png" alt="" class="header-right-icon">
         </div>
     </header>
+    <article>
+
+    </article>
 </body>
 
 </html>
