--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/body.css">
     <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
 </head>
 
@@ -31,7 +32,14 @@
         </div>
     </header>
     <article>
-
+        <span style="color:#9fa3ad; font-size: 18px;letter-spacing: 1px;">Home / Category / <span style="color:black">Product title</span> </span>
+        <h1 style="font-size: 68px;margin: 9px 0;">Product title</h1>
+        <div style="display: flex;justify-content: space-between;">
+            <div style="display: inline-flex;flex-direction: row;">
+                <img src="src/img/4.5s.png" alt="">
+                <span>4.20</span>
+            </div>
+        </div>
     </article>
 </body>
 
