--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/body.css">
     <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -35,9 +36,23 @@
         <span style="color:#9fa3ad; font-size: 18px;letter-spacing: 1px;">Home / Category / <span style="color:black">Product title</span> </span>
         <h1 style="font-size: 68px;margin: 9px 0;">Product title</h1>
         <div style="display: flex;justify-content: space-between;">
-            <div style="display: inline-flex;flex-direction: row;">
-                <img src="src/img/4.5s.png" alt="">
-                <span>4.20</span>
+            <div style="display: inline-flex;flex-direction: row;font-size: 18px;word-spacing: 2px;">
+                <img src="src/img/4.5s.png" alt="" width="125px">
+                <span style="font-weight: bolder;margin-left: 2px;"> 4.20 <span style="color:#9196a1;font-weight: lighter;"> (99 reviews)</span></span>
+            </div>
+            <div style="display: inline-flex;align-items:center; justify-content: space-around;width: 260px;flex-direction: row;font-size: 18px;word-spacing: 2px;">
+                <span style="display: inline-flex;width: 30%; align-items:  center;justify-content: space-between;">
+                    <span class="material-symbols-outlined">
+                        share
+                    </span>
+                    <span>Share</span>
+                </span>
+                <span style="display: inline-flex;width: 28%; align-items: center;justify-content: space-between;">
+                    <span class="material-symbols-outlined">
+                        favorite
+                    </span>
+                    Save
+                </span>
             </div>
         </div>
     </article>
