finished left product description

--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
                 </span>
             </div>
         </div>
+        <br>
+        <div class="grid-container">
+            <img src="src/img/product_big.png" alt="" class="big-picture">
+            <img src="src/img/product_1.png" class = "container-item"alt="">
+            <img src="src/img/product_2.png" class = "container-item"alt="">
+            <img src="src/img/product_3.png" class = "container-item"alt="">
+            <img src="src/img/product_4.png" class = "container-item"alt="">
+        </div>
+        <br>
+        <div style="display:flex;justify-content: space-between;">
+            <div class="product-description">
+                <h2 style="font-size: 33px;margin: 27px 0 33px;">Product description</h2>
+                <p style="margin: 0;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem lorem aluquam sed lacinia quis. Nibh distumst vulputate oido pellentesque sit quis ac, sit ipsum. Sit rhoncus velt in sed massa arcu sit eu. Vitae et vitae eget lorem non dui. Soliicitundin ut mi adipiscing duls.</p>
+                <p style="margin: 0;">Convallis in semper laoreet nibh leo. Vivamus malesuada ipsum pulvinar non rumtrum risus dui, risus. Prurs massa velit iaculis tincidunt tortor, risus, scelerisque risus. In at lorem pellentesque orci aenean dictum dignissim in. Aenea pulvinar diam interdum ullamcorper. Vel urna, tortor,massa metus purus metus. Maecena mollis in velit auctor cursus scelerisque eget.</p>
+                <br>
+                <div class="details-grid-container">
+                    <div style="display: flex; justify-content: flex-start;"><img src="src/img/Truck 1.png" alt=""> <span>Free delivery</span></div>
+                    <div style="display: flex; justify-content: flex-start;"><img src="src/img/Arrow bend up left 1.png" alt=""> <span>7 days return</span></div>
+                    <div style="display: flex; justify-content: flex-start;"><img src="src/img/Globe 1.png" alt=""> <span>Made in USA</span></div>
+                    <div style="display: flex; justify-content: flex-start;"><img src="src/img/Medal 1.png" alt=""> <span>2 years guarantee</span></div>
+                    <div style="display: flex; justify-content: flex-start;"><img src="src/img/Chat dots 1.png" alt=""> <span>100% authentic</span></div>
+                    <div style="display: flex; justify-content: flex-start;"><img src="src/img/Checks 1.png" alt=""> <span>24/7 customer support</span></div>
+                </div>
+            </div>
+        </div>
     </article>
 </body>
 
