finished cart menu

--- a/index.html
+++ b/index.html
@@ -79,7 +79,45 @@
                     <div style="display: flex; justify-content: flex-start;"><img src="src/img/Checks 1.png" alt=""> <span>24/7 customer support</span></div>
                 </div>
             </div>
+            <div class="cart">
+                <h2 style="direction: rtl;margin: 0px;font-size: 40px;">$99</h2>
+                <div style="width: 100%;">
+                    <select name="Color" id="color">
+                        <option value="" disabled selected>Color</option>
+                        <option value="red">Red</option>
+                        <option value="blue">Blue</option>
+                        <option value="brown">Brown</option>
+                    </select>
+                </div>
+                <div style="width: 100%;">
+                    <select name="Color" id="color">
+                        <option value="" disabled selected>Size</option>
+                        <option value="red">Red</option>
+                        <option value="blue">Blue</option>
+                        <option value="brown">Brown</option>
+                    </select>
+                </div>
+                <div style="width: 100%;">
+                    <select name="Color" id="color">
+                        <option value="" disabled selected>3</option>
+                        <option value="red">Red</option>
+                        <option value="blue">Blue</option>
+                        <option value="brown">Brown</option>
+                    </select>
+                </div>
+                <div id = "cart-total">
+                    <span style="color:#9398a3">Total</span>
+                    <span id = "cart-total-value" style="font-weight: 700;">$265</span>
+                </div>
+                <a href="#a" id = "cart-buy-now">Buy now</a>
+                <a href="#a" id="cart-add-to"><span class="material-symbols-outlined">
+                    shopping_cart
+                    </span> Add to cart</a>
+                
+            </div>
+            
         </div>
+        <hr style="margin: 70px 0;">
     </article>
 </body>
 
