--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <p style="margin: 0;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem lorem aluquam sed lacinia quis. Nibh distumst vulputate oido pellentesque sit quis ac, sit ipsum. Sit rhoncus velt in sed massa arcu sit eu. Vitae et vitae eget lorem non dui. Soliicitundin ut mi adipiscing duls.</p>
                 <p style="margin: 0;">Convallis in semper laoreet nibh leo. Vivamus malesuada ipsum pulvinar non rumtrum risus dui, risus. Prurs massa velit iaculis tincidunt tortor, risus, scelerisque risus. In at lorem pellentesque orci aenean dictum dignissim in. Aenea pulvinar diam interdum ullamcorper. Vel urna, tortor,massa metus purus metus. Maecena mollis in velit auctor cursus scelerisque eget.</p>
                 <br>
+                <br>
                 <div class="details-grid-container">
                     <div style="display: flex; justify-content: flex-start;"><img src="src/img/Truck 1.png" alt=""> <span>Free delivery</span></div>
                     <div style="display: flex; justify-content: flex-start;"><img src="src/img/Arrow bend up left 1.png" alt=""> <span>7 days return</span></div>
@@ -90,19 +91,19 @@
                     </select>
                 </div>
                 <div style="width: 100%;">
-                    <select name="Color" id="color">
+                    <select name="size" id="size">
                         <option value="" disabled selected>Size</option>
-                        <option value="red">Red</option>
-                        <option value="blue">Blue</option>
-                        <option value="brown">Brown</option>
+                        <option value="small">S</option>
+                        <option value="medium">M</option>
+                        <option value="large">L</option>
                     </select>
                 </div>
                 <div style="width: 100%;">
-                    <select name="Color" id="color">
-                        <option value="" disabled selected>3</option>
-                        <option value="red">Red</option>
-                        <option value="blue">Blue</option>
-                        <option value="brown">Brown</option>
+                    <select name="count" id="count">
+                        <option value="3">3</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="4">4</option>
                     </select>
                 </div>
                 <div id = "cart-total">
@@ -117,7 +118,25 @@
             </div>
             
         </div>
-        <hr style="margin: 70px 0;">
+        <hr style="margin: 50px 0 70px 0;">
+        <div class="reviews">
+            <div class="reviews-title">
+                <div class="reviews-title-left">
+                    <h1 style="font-size: 30px;">Reviews</h1>
+                    <img src="src/img/1s.png" alt="" style="height: 25px;">
+                    <h4 style="font-size: 16px;">4.20</h4>
+                    <span style="color:#adb2ba">(99 reviews)</span>
+                </div>
+                <span class="reviews-title-right">Show all reviews 
+                    <span class="material-symbols-outlined" style="font-size: large;">
+                        arrow_forward_ios
+                        </span>
+                </span>
+                <div class="reviews-list">
+                    <div class="reviews-list-contain"></div>
+                </div>
+            </div>
+        </div>
     </article>
 </body>
 
