--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="reviews-title-left">
                     <h1 style="font-size: 30px;">Reviews</h1>
                     <img src="src/img/1s.png" alt="" style="height: 25px;">
-                    <h4 style="font-size: 16px;">4.20</h4>
+                    <h4 style="font-size: 18px;">4.20</h4>
                     <span style="color:#adb2ba">(99 reviews)</span>
                 </div>
                 <span class="reviews-title-right">Show all reviews 
@@ -132,8 +132,48 @@
                         arrow_forward_ios
                         </span>
                 </span>
-                <div class="reviews-list">
-                    <div class="reviews-list-contain"></div>
+
+            </div>
+            <div class="reviews-list">
+                <div class="reviews-list-contain">
+                    <div class="reviews-list-contain-user">
+                        <img src="src/img/Jay_Rutherford.png" alt="" width="48px" height="48px">
+                        <div class="reviews-list-contain-user-rating">
+                            <h4 style="margin: 0;">Jay Rutherford <span style="font-weight: lighter;color:#a0a4ae"> 3d ago</span></h4>
+                            <img src="src/img/5s.png" alt="" height="20px" width="100px">
+                        </div>
+                    </div>
+                    <p>Nulla laboris fugiat fugiat minim minim excepteur eiusmo quis. Leborum est minim id cillum no strud cillum consectetur.</p>
+                </div>
+                <div class="reviews-list-contain">
+                    <div class="reviews-list-contain-user">
+                        <img src="src/img/Nicole_Chung.png" alt="" width="48px" height="48px">
+                        <div class="reviews-list-contain-user-rating">
+                            <h4 style="margin: 0;">Nicole Chung <span style="font-weight: lighter;color:#a0a4ae"> 3d ago</span></h4>
+                            <img src="src/img/3.5s.png" alt="" height="20px" width="100px">
+                        </div>
+                    </div>
+                    <p>Proident ullamco minim quis aliquip eiusmod in deserunt slt aliqa. Adiqisicing reqrehenderit elit offcia occaecat dolor.</p>
+                </div>
+                <div class="reviews-list-contain">
+                    <div class="reviews-list-contain-user">
+                        <img src="src/img/Wei_Anold.png" alt="" width="48px" height="48px">
+                        <div class="reviews-list-contain-user-rating">
+                            <h4 style="margin: 0;">Wei Anold <span style="font-weight: lighter;color:#a0a4ae"> 3d ago</span></h4>
+                            <img src="src/img/4.5s.png" alt="" height="20px" width="100px">
+                        </div>
+                    </div>
+                    <p>Ut commodo quis sit in consequat sit nisi dolor adipiscing offcia tempor do duis consequat dolore dolore ipsum.</p>
+                </div>
+                <div class="reviews-list-contain">
+                    <div class="reviews-list-contain-user">
+                        <img src="src/img/Judith_Mejia.png" alt="" width="48px" height="48px">
+                        <div class="reviews-list-contain-user-rating">
+                            <h4 style="margin: 0;">Judith Mejia <span style="font-weight: lighter;color:#a0a4ae"> 3d ago</span></h4>
+                            <img src="src/img/4s.png" alt="" height="20px" width="100px">
+                        </div>
+                    </div>
+                    <p>Ad laborum dolor cupidatat culpa mollit non non sunt qui. In ut et aute mollit eiusmod occaecat eiusmod mi.</p>
                 </div>
             </div>
         </div>
