finished related products:

--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
         </div>
         <hr style="margin: 50px 0 70px 0;">
         <div class="reviews">
-            <div class="reviews-title">
-                <div class="reviews-title-left">
+            <div class="title">
+                <div class="title-left">
                     <h1 style="font-size: 30px;">Reviews</h1>
                     <img src="src/img/1s.png" alt="" style="height: 25px;">
                     <h4 style="font-size: 18px;">4.20</h4>
                     <span style="color:#adb2ba">(99 reviews)</span>
                 </div>
-                <span class="reviews-title-right">Show all reviews 
+                <span class="title-right">Show all reviews 
                     <span class="material-symbols-outlined" style="font-size: large;">
                         arrow_forward_ios
                         </span>
@@ -177,7 +177,119 @@
                 </div>
             </div>
         </div>
+        <hr style="margin: 50px 0 60px 0;">
+        <div class="related-product">
+            <div class="title">
+                <div class="title-left">
+                    <h1 style="font-size: 30px;">Related products</h1>
+                </div>
+                <span class="title-right">See more
+                    <span class="material-symbols-outlined" style="font-size: large;">
+                        arrow_forward_ios
+                        </span>
+                </span>
+            </div>
+            <div class="related-product-list">
+                <!-- Product 1 -->
+                <div class="related-product-list-item">
+                    <img src="src/img/rlt_1.png" alt="" style="width: 360px;">
+                    <div class="related-product-list-item-content">
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <h3 style="font-size: 28px;margin: 0;">Product title</h3>
+                            </div>
+                            <div class="title-right">
+                                <img src="src/img/Heart 23.png" alt="">
+                            </div>
+                        </div>
+                        <p style="margin:0;font-size: x-large;font-weight: bolder ;color:#00bdd6;">$230</p>
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <img src="src/img/5s.png" alt="" height="20px" width="100px">
+                            </div>
+                            <div class="title-right">
+                                <pre style="font-size: 14px;">1000 items sold</pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Product 2 -->
+                <div class="related-product-list-item">
+                    <img src="src/img/rlt_2.png" alt="" style="width: 360px;">
+                    <div class="related-product-list-item-content">
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <h3 style="font-size: 28px;margin: 0;">Product title</h3>
+                            </div>
+                            <div class="title-right">
+                                <img src="src/img/Heart 23.png" alt="">
+                            </div>
+                        </div>
+                        <p style="margin:0;font-size: x-large;font-weight: bolder ;color:#00bdd6;">$230</p>
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <img src="src/img/4s.png" alt="" height="20px" width="100px">
+                            </div>
+                            <div class="title-right">
+                                <pre style="font-size: 14px;">765 items sold</pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Product 3 -->
+                <div class="related-product-list-item">
+                    <img src="src/img/rlt_3.png" alt="" style="width: 360px;">
+                    <div class="related-product-list-item-content">
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <h3 style="font-size: 28px;margin: 0;">Product title</h3>
+                            </div>
+                            <div class="title-right">
+                                <img src="src/img/Heart 23.png" alt="">
+                            </div>
+                        </div>
+                        <p style="margin:0;font-size: x-large;font-weight: bolder ;color:#00bdd6;">$299</p>
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <img src="src/img/4.5s.png" alt="" height="20px" width="100px">
+                            </div>
+                            <div class="title-right">
+                                <pre style="font-size: 14px;">360 items sold</pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Product 4 -->
+                <div class="related-product-list-item">
+                    <img src="src/img/rtl_4.png" alt="" style="width: 360px;">
+                    <div class="related-product-list-item-content">
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <h3 style="font-size: 28px;margin: 0;">Product title</h3>
+                            </div>
+                            <div class="title-right">
+                                <img src="src/img/Heart 23.png" alt="">
+                            </div>
+                        </div>
+                        <p style="margin:0;font-size: x-large;font-weight: bolder ;color:#00bdd6;">$99</p>
+                        <div class="title" style="margin: 0;">
+                            <div class="title-left">
+                                <img src="src/img/3.5s.png" alt="" height="20px" width="100px">
+                            </div>
+                            <div class="title-right">
+                                <pre style="font-size: 14px;">234 items sold</pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </article>
+    <hr style="margin: 50px 0 60px 0;">
+    <footer>
+        asdfsda
+    </footer>
 </body>
+
 
 </html>
