--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/body.css">
+    <link rel="stylesheet" href="src/css/footer.css">
     <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -285,9 +286,42 @@
             </div>
         </div>
     </article>
-    <hr style="margin: 50px 0 60px 0;">
+    <hr style="margin: 50px 0 85px 0;">
     <footer>
-        asdfsda
+        <img src="src/img/logo.png" alt="" width="165px" height="54px">
+        <h2 style="margin: 48px 0 34px;font-size: 30px;">Subcribe to our newsletter</h2>
+        <div class="email">
+            <input class = "email-text" type="text" name="input-email" id="input-email" placeholder="Input your email">
+            <span class="material-symbols-outlined" style="position: absolute; left: 13px ;top:13px;">
+                mail
+                
+                </span>
+            <a href="#a" id="email-subcribe">Subcribe</a>
+        </div>
+        <div class="footer-container">
+            <div class="footer-container-column">
+                <h1>Product</h1>
+                <p>Features</p>
+                <p>Pricing</p>
+            </div>
+            <div class="footer-container-column">
+                <h1>Resources</h1>
+                <p>Blog</p>
+                <p>User guides</p>
+                <p>Webinars</p>
+            </div>
+            <div class="footer-container-column">
+                <h1>Company</h1>
+                <p>About us</p>
+                <p>Contact us</p>
+            </div>
+            <div class="footer-container-column">
+                <h1>Plans & Pricing</h1>
+                <p>Personal</p>
+                <p>Start up</p>
+                <p>Organization</p>
+            </div>
+        </div>
     </footer>
 </body>
 
