--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 <img src="src/img/Heart 23.png" alt="">
                             </div>
                         </div>
-                        <p style="margin:0;font-size: x-large;font-weight: bolder ;color:#00bdd6;">$230</p>
+                        <p style="margin:0;font-size: x-large;font-weight: bolder ;color:#00bdd6;">$199</p>
                         <div class="title" style="margin: 0;">
                             <div class="title-left">
                                 <img src="src/img/4s.png" alt="" height="20px" width="100px">
@@ -286,7 +286,7 @@
             </div>
         </div>
     </article>
-    <hr style="margin: 50px 0 85px 0;">
+    <hr style="margin: 50px 0 60px 0;">
     <footer>
         <img src="src/img/logo.png" alt="" width="165px" height="54px">
         <h2 style="margin: 48px 0 34px;font-size: 30px;">Subcribe to our newsletter</h2>
@@ -322,6 +322,20 @@
                 <p>Organization</p>
             </div>
         </div>
+        <div id="footer-bottom">
+            <select name="language" id="language">
+                <option value="English">English</option>
+                <option value="Vietnamese">Vietnamese</option>
+            </select>
+            <span style="color:#babdc4;font-size: 18px;">&#169; 2022 Brand, Inc. &#x2022; Privacy &#x2022; Terms &#x2022; Sitemap</span>
+            <div class="footer-image">
+                <img src="src/img/Twitter 9.png" alt="">
+                <img src="src/img/Facebook 9.png " alt="">
+                <img src="src/img/LinkedIn 8.png" alt="">
+                <img src="src/img/YouTube 8.png" alt="">
+            </div>
+        </div>
+
     </footer>
 </body>
 
